Wed Nov 15 15:47:31 GMT 2006  Rich Seibel<seibel_r@ociweb.com>

        * tests/DCPS/FooTest3/Writer.cpp:
        * tests/DCPS/FooTest3NoKey/Writer.cpp:
        * tests/DCPS/FooTest3_1/Writer.cpp:
        * tests/DCPS/FooTest3_2/Writer.cpp:
        * tests/DCPS/FooTest5/Writer.cpp:
        * tests/DCPS/MultiDPTest/Writer.cpp:
        * tests/DCPS/MultiTopicTest/Writer.cpp:
          Changed the reinterpret cast required by
          Green Hills compiler to C-style, since the
          Visual Studio compiler didn't like it.

Tue Nov 14 15:36:59 GMT 2006  Rich Seibel<seibel_r@ociweb.com>

        * dds/DCPS/transport/simpleTCP/SimpleTcpSendStrategy.cpp:
          Rearranged includes to correct a dependency which tripped
          up the Green Hills compiler.

        * tests/DCPS/FooTest3/Writer.cpp:
        * tests/DCPS/FooTest3NoKey/Writer.cpp:
        * tests/DCPS/FooTest3_1/Writer.cpp:
        * tests/DCPS/FooTest3_2/Writer.cpp:
        * tests/DCPS/FooTest5/Writer.cpp:
        * tests/DCPS/MultiDPTest/Writer.cpp:
        * tests/DCPS/MultiTopicTest/Writer.cpp:
          Added a cast of thr_self to CORBA::Long to satisfy
          Green Hills compiler.

Mon Nov 13 16:55:56 UTC 2006  Ciju John  <johnc@ociweb.com>

        * dds/DCPS/DataWriterImpl.cpp:
          Add new log messages.

        * dds/DCPS/transport/framework/EntryExit.h:
        * dds/DCPS/transport/framework/TransportDebug.h:
          Modifications to set all old-style debug statements to low
          priority.

        * dds/DCPS/transport/framework/TransportInterface.inl:
          Changed log level.

        * dds/DCPS/transport/framework/TransportReceiveStrategy.cpp:
          Decoment behavior.

        * dds/DCPS/transport/framework/TransportSendStrategy.h:
          The allocators were of the wrong types. Fixed them.

        * dds/DCPS/transport/framework/TransportSendStrategy.cpp:
          Fixed an array initialization problem for non-GNU compilers.
