@@ -6,7 +6,7 @@
 #include  "dds/DCPS/transport/framework/TransportImpl.h"
 #include  "dds/DCPS/transport/framework/TransportInterface.h"
 #include  "dds/DCPS/transport/framework/ReceivedDataSample.h"
-#include <string>
+#include  "ace/sstring.h"
 
 
 SimpleSubscriber::SimpleSubscriber()
@@ -44,7 +44,7 @@ SimpleSubscriber::init(TAO::DCPS::TransportIdType          transport_id,
   if (status != TAO::DCPS::ATTACH_OK)
     {
       // We failed to attach to the transport for some reason.
-      std::string status_str;
+      ACE_TString status_str;
 
       switch (status)
         {
